Change response struct
